Fixed add on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ img {
     display: flex;
     justify-content: space-evenly;
     padding-bottom: 5px;
+    overflow-x: scroll;
 }
 
 .burgerbox {
